--- a/Megaom/index.html
+++ b/Megaom/index.html
@@ -28,19 +28,19 @@
         <nav class="header-menu">
             <ul class="header-menu-list">
                 <li class="header-menu-item">
-                    <a href="#main" class="header-menu-link">Главная</a>
+                    <a href="#main" class="header-menu-link bottom-line">Главная</a>
                 </li>
                 <li class="header-menu-item">
-                    <a href="#services" class="header-menu-link">Услуги</a>
+                    <a href="#services" class="header-menu-link bottom-line">Услуги</a>
                 </li>
                 <li class="header-menu-item">
-                    <a href="#our-work" class="header-menu-link">Работы</a>
+                    <a href="#our-work" class="header-menu-link bottom-line">Работы</a>
                 </li>
                 <li class="header-menu-item">
-                    <a href="#about-us" class="header-menu-link">О нас</a>
+                    <a href="#about-us" class="header-menu-link bottom-line">О нас</a>
                 </li>
                 <li class="header-menu-item">
-                    <a href="#contacts" class="header-menu-link">Контакты</a>
+                    <a href="#contacts" class="header-menu-link bottom-line">Контакты</a>
                 </li>
             </ul>
         </nav>
@@ -75,7 +75,7 @@
                 <h2 class="section-2-main-text">Услуги</h2>
                 <div class="wrapper">
                     <p> &nbsp &nbsp &nbsp &nbsp Электротехническая лаборатория ООО «ЭТЛ МЕГАОМ»  производит комплексные  низковольтные и высоковольтные электрические измерения электрооборудования, а также испытания диэлектрических,механических средств защиты и электроинструмента. По результатам испытаний выдаются установленные регламентами документы(протоколы,технические отчеты). Работаем с нашими заказчиками индивидуально, всегда открыты  к взаимовыгодному сотрудничеству. <br>С полным перечнем работ можно ознакомится <a class="docs" href="assets/documents/spisok.pdf" target="_blank">по ссылке</a>.</p>
-                    <img src="assets/img/service-1.png" alt="...">
+                    <img src="assets/img/service-1.png" alt="автоматические выключатели">
                 </div> 
             </div>
         </section>
@@ -84,27 +84,27 @@
                 <h2 class="section-3-main-text">Что и как мы делаем</h2>
                 <div class="wrapper">
                     <article class="service">
-                        <img src="assets/img/service-card-1.png" alt="...">
+                        <img src="assets/img/service-card-1.png" alt="стенд №1">
                         <h3>Испытание электрических средств защиты</h3>
                     </article>
                     <article class="service">
-                        <img src="assets/img/service-card-2.png" alt="...">
+                        <img src="assets/img/service-card-2.png" alt="стенд №2">
                         <h3>Проверка электроинструмента</h3>
                     </article>
                     <article class="service">
-                        <img src="assets/img/service-card-3.png" alt="...">
+                        <img src="assets/img/service-card-3.png" alt="стенд №3">
                         <h3>Испытание поясов</h3>                        
                     </article>
                     <article class="service">
-                        <img src="assets/img/service-card-4.png" alt="...">
+                        <img src="assets/img/service-card-4.png" alt="стенд №4">
                         <h3>Прогрузка автоматичеcких выключателей</h3>
                     </article>
                     <article class="service">
-                        <img src="assets/img/service-card-5.png" alt="...">
+                        <img src="assets/img/service-card-5.png" alt="стенд №5">
                         <h3>Испытание механических средств защиты</h3>                        
                     </article>   
                     <article class="service">
-                        <img src="assets/img/service-card-6.png" alt="...">
+                        <img src="assets/img/service-card-6.png" alt="стенд №6">
                         <h3>Испытания высоковольтного силового кабеля</h3>
                     </article>                                        
                 </div>
@@ -112,17 +112,17 @@
         </section>
         <section id="about-us" class="section section-4">
             <div class="container">
-                <h2>О нас</h2>
+                <h2 class="section-4-main-text">О нас</h2>
                 <div class="wrapper">
                     <div class="left">
-                        <img src="assets/img/about_us-1.png" alt="...">
+                        <img src="assets/img/about_us-1.png" alt="трансформатор">
                         <p class="section-4-text-block">Сотрудники лаборатории имеют большой опыт работы, собственные разработки и изобретения, подтвержденные авторскими свидетельствами. У них есть все необходимые удостоверения и допуски (5 группа  по электробезопасности, до и выше 1000 В). Лаборатория имеет <a class="docs" href="assets/documents/dozvil.pdf" target="_blank">разрешение</a> на проведение всего комплекса работ. Соответствие наших методик и процедур электротехнических измерений подтверждено <a class="docs" href="assets/documents/attestat_23.pdf" target="_blank">свидетельством аттестации</a>.</p> 
                     </div>
                     <div class="right">
                         <p class="fact"><strong>Важный факт:</strong></p>
                         <blockquote>Высококвалифицированный персонал ООО "ЭТЛ Мегаом" имеет большой опыт (более 30 лет) в области электрических измерений.</blockquote>
                         <cite class="person">Намитоков В.К.<br> Начальник лаборатории</cite>
-                        <img src="assets/img/about_us-2.png" alt="..."> 
+                        <img src="assets/img/about_us-2.png" alt="Намитоков"> 
                     </div>                                       
                 </div>
             </div>
